# RustCRS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  E2E_TEST_RESULTS_SUMMARY.md  GEMINI.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  UI_TEST_SUMMARY.md  docker-compose.yml  index.html  package-lock.json  rust-dev.sh  start-dev.sh  verify-setup.sh
.github/: cliff.toml
.serena/: project.yml
assets/: AccountsView-CQtCtXYn.js  ApiStatsView-MIZ2crDW.js  ConfirmModal-AMairExs.js  LoginView-D4G3Jtnf.js  MainLayout-DCslDQVg.js  SettingsView-DXlHIW_o.js  TutorialView-BteUe7uC.js  UserManagementView-B06Wuayk.js  element-plus-Q-2ZRCUJ.css  vue-vendor-BYBSLzRw.js
claudedocs/: README.md  UI交互地图.md  batch-10-completion-report.md  batch-11-completion-report.md  batch-6-fixes.md  (+49 more)
rust/: .env.example  .gitignore  API_DOCUMENTATION.md  CURRENT_STATUS.md  Cargo.toml  README.md  run-integration-tests.sh
rust/benches/: apikey_bench.rs  crypto_bench.rs  serialization_bench.rs
rust/docs/: INTERFACE.md
rust/src/: lib.rs  main.rs
rust/src/config/: mod.rs
rust/src/middleware/: auth.rs  mod.rs
rust/src/models/: account.rs  api_key.rs  mod.rs  usage_record.rs
rust/src/redis/: mod.rs  pool.rs
rust/src/routes/: admin.rs  api.rs  gemini.rs  health.rs  mod.rs  openai.rs
rust/src/services/: account.rs  account_scheduler.rs  admin.rs  api_key.rs  bedrock_relay.rs  claude_relay.rs  gemini_relay.rs  mod.rs  openai_relay.rs  pricing_service.rs  relay_trait.rs  token_refresh.rs  unified_claude_scheduler.rs  unified_gemini_scheduler.rs  unified_openai_scheduler.rs  webhook.rs
rust/src/utils/: claude_code_headers.rs  cost_calculator.rs  crypto.rs  error.rs  http_client.rs  logger.rs  mod.rs  model_helper.rs  session_helper.rs
rust/src/utils/prompt_similarity/: algorithm.rs  matcher.rs  mod.rs  normalizer.rs  templates.rs
rust/tests/: account_scheduler_integration_test.rs  account_service_integration_test.rs  admin_endpoints_integration_test.rs  api_key_advanced_integration_test.rs  api_key_integration_test.rs  api_routes_integration_test.rs  claude_console_forwarding_test.rs  cost_integration_test.rs  crypto_integration_test.rs  debug_similarity.rs  gemini_routes_integration_test.rs  openai_routes_integration_test.rs  pricing_service_integration_test.rs  prompt_similarity_batch2_test.rs  prompt_similarity_batch3_test.rs  prompt_similarity_batch4_test.rs  redis_integration_test.rs  streaming_integration_test.rs  test_api_key_date_format.rs  test_api_key_delete.rs  test_api_key_detail.rs  test_api_key_tags.rs  test_ccr_account_create.rs  test_claude_accounts_response_format.rs  test_get_tags_endpoint.rs  test_spa_routing.rs  token_refresh_integration_test.rs  webhook_integration_test.rs
rust/tests/common/: mod.rs
(+154 files in other folders)
