[package]
name = "claude-relay"
version = "2.0.0"
edition = "2021"
authors = ["Claude Relay Contributors"]
description = "High-performance AI API relay service"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "socks", "stream", "rustls-tls"], default-features = false }
hyper = { version = "1", features = ["full"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "cluster-async", "connection-manager"] }
deadpool-redis = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Security and crypto
argon2 = "0.5"
jsonwebtoken = "9"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
scrypt = "0.11"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Rate limiting
governor = "0.6"
dashmap = "5"

# OAuth and authentication
oauth2 = "4"

# LDAP (optional)
ldap3 = { version = "0.11", optional = true }

# AWS SDK (optional)
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }

# Email (optional)
lettre = { version = "0.11", optional = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
scopeguard = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
criterion = "0.5"
serial_test = "3.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }

[features]
default = ["ldap", "aws", "email"]
ldap = ["dep:ldap3"]
aws = ["dep:aws-config", "dep:aws-sdk-bedrockruntime"]
email = ["dep:lettre"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "claude-relay"
path = "src/main.rs"

# Benchmarks disabled until benches/ directory is created
# [[bench]]
# name = "benchmarks"
# harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
